@@ -65,6 +65,7 @@ version <next>:
 - significant performance improvements in Windows Television (WTV) demuxer
 - nnedi deinterlacer
 - streamselect video and astreamselect audio filter
+- swaprect filter
 
 
 version 2.8:
